--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: "Segoe",sans-serif;
 }
 
 .textQuestion{
@@ -11,7 +12,6 @@ body {
     width: fit-content;
     text-decoration: none;
     margin-bottom: 10px;
-
 }
 .title{
     max-width: 300px;
@@ -32,7 +32,6 @@ body {
     width: fit-content;
     text-decoration: none;
     text-align: start;
-
 }
 .container{
     display: flex;
@@ -42,5 +41,12 @@ body {
     align-items: start;
     justify-content: start;
     text-align: start;
-
+}
+@font-face {
+    font-family: "Segoe";
+    src: url("../fonts/SegoeUIVariableStaticDisplay.ttf");
+}
+@font-face {
+    font-family: "Segoe bold";
+    src: url("../fonts/SegoeUIVariableStaticDisplayBold.ttf");
 }
