--- a/style/details.css
+++ b/style/details.css
@@ -48,20 +48,22 @@ body{
 .numberBlack{
     background: black;
     color: white;
-    width: 25px;
-    height: 25px;
+    width: 15px;
+    height: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
     margin-right: 10px;
     margin-top: 0;
+    margin-bottom: 20px;
 }
 .titleAnswer{
     display: flex;
     width: 100%;
     min-width: 945px;
     padding-top: 20px;
+    align-items: center;
 }
 .subAnswerP{
     padding-left: 30px;
