--- a/style/details.css
+++ b/style/details.css
@@ -70,6 +70,7 @@ body{
     font-size: 18px;
     line-height: 26px;
     font-family: "Segoe",sans-serif;
+    list-style-type: none;
 }
 @font-face {
     font-family: "Segoe";
